# srbd-mpc

./: .gitignore  README.md  tags
cmake/: Findmy_hpipm-cpp.cmake
hpipm_imp/: CMakeLists.txt  compile_commands.json
hpipm_imp/docker/: Dockerfile
hpipm_imp/include/srbd-mpc/: qp_data.hpp  (+4 more)
hpipm_imp/scripts/: build_base.sh  run_docker.sh  test_base.sh  ubuntu_install_dependencies.sh
hpipm_imp/src/: contact_schedule.cpp  cost_function.cpp  friction_cone.cpp  mpc_solution.cpp  pnc_robot_state.cpp  qp_data.cpp  robot_state.cpp  state_equation.cpp
hpipm_imp/test/: contact_schedule_test.cpp  mpc_test.cpp
quadprog_imp/: CMakeLists.txt  compile_commands.json  configuration.hpp  main.cpp
quadprog_imp/.cache/clangd/index/: Array.cc.C4D8D0106436213E.idx  Array.hh.F0AC38E456FA7D70.idx  QuadProg++.cc.488618D2A05F0DE4.idx  QuadProg++.hh.07CAD2E31DCBD413.idx  gait_cycle.cpp.83355713E4462A4F.idx  gait_cycle.hpp.9B1104AEA3B72417.idx  main.cpp.F9F105C7964DB9FD.idx  reaction_force_schedule.cpp.7F03A056346DC373.idx  reaction_force_schedule.hpp.3A9777062330400F.idx  srbd_mpc.cpp.4DC477D2B86212DB.idx  srbd_mpc.hpp.0B85FD1532B542A2.idx
quadprog_imp/experiment_data/: qp_mult_dur.txt  qp_prep_dur.txt  qp_solve_dur.txt
quadprog_imp/goldfarb/: CMakeLists.txt
quadprog_imp/mpc/: CMakeLists.txt  contact_schedule.cpp  contact_schedule.hpp  gait_cycle.cpp  gait_cycle.hpp  reaction_force_schedule.cpp  reaction_force_schedule.hpp  srbd_mpc.cpp  srbd_mpc.hpp
quadprog_imp/plot/: plot_computation_time.py
quadprog_imp/test/: CMakeLists.txt  mpc_test.cpp
test/: contact_schedule_test.cpp
(+2 files in other folders)
